# discord-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  design.md  discord-bot.service  pyproject.toml  requirements.txt
scripts/: discord_admin.py  pre-start.sh  sync_projects.py
src/: bot.py  main.py
src/api/: server.py
src/cogs/: auto_upgrade.py  claude_chat.py  docs_sync.py  reminder.py  watchdog.py
src/database/: claude_session_repository.py  models.py  repository.py
src/utils/: embeds.py  logger.py
tests/: conftest.py  test_api_server.py  test_claude_session_repository.py  test_embeds.py  test_reminder_cog.py  test_repository.py  test_watchdog_cog.py  test_zero_config_boundary.py
