[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebibot"
version = "1.0.0"
description = "EbiBot - Personal Discord Bot with Claude Code Chat, Push notifications, and Watchdog"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.6,<3.0",
    "aiohttp>=3.9,<4.0",
    "python-dotenv>=1.0,<2.0",
    "aiosqlite>=0.20,<1.0",
    "claude-code-discord-bridge",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.uv.sources]
claude-code-discord-bridge = { git = "https://github.com/ebibibi/claude-code-discord-bridge.git", branch = "debug/trace-run-claude" }
